# data-science-applications-hub

./: .gitignore  FILE_FORMAT_SUPPORT.md  README.md  example  pyproject.toml
app/: __init__.py
app/calc/: ae_univariate.py  monitor.py
app/core/models/: __init__.py  dataset_config.py  schema.py
app/core/routers/: data_io.py  dataset_configs.py  health.py
app/core/service/: storage.py  (+3 more)
app/models/: __init__.py  ae.py  dataset_config.py  datasets.py  insights.py  monitor.py
app/retrieve/: csv_upload.py  data_upload.py  datasets.py
app/routers/: ae.py  dataset_configs.py  datasets.py  monitor.py
app/service/: ae_insights.py  ae_univariate.py  ae_variable_labels.py  dataset_cola.py  dataset_config.py  dataset_schema.py  datasets.py  monitor.py  storage.py
app/utils/: env.py  paths.py
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: env.d.ts  main.ts  plotly.d.ts  quasar-variables.sass
docs/: repo-structure.md
docs/specs/: binary-feature-mortality-ae-llm-ai-implementation-plan.md
scripts/: local_start.sh
tests/calc/: test_ae_univariate.py  test_monitor.py
tests/core/: test_schema_profile.py
tests/retrieve/: test_datasets.py
tests/service/: test_ae_insights.py  test_ae_univariate_exclusions.py  test_ae_univariate_from_config.py  test_ae_univariate_service.py  test_ae_univariate_split.py  test_binary_feature_calc.py  test_dataset_cola.py  test_dataset_config_integration.py  test_dataset_schema.py  test_env_aliases.py  test_monitor_dataset.py  test_monitor_service.py  test_storage_migration.py
(+65 files in other folders)
