[project]
name = "advanced-analytics-insight-hub"
version = "0.1.0"
description = "Advanced Analytics Insight Hub (FastAPI + Quasar)."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "duckdb>=1.5.1",
    "fastapi>=0.115.0",
    "numpy>=2.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "scipy>=1.11.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["client/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
